# PX4-Drone-Following-Turtlebot

./: .gitignore  README.md  home.lnk
src/drone_takeoff_pkg/: package.xml  setup.cfg  setup.py
src/drone_takeoff_pkg/drone_takeoff_pkg/: takeoff_node.py
src/drone_takeoff_pkg/launch/: takeoff_launch.py
src/turtlebot_random_move_pkg/: package.xml  setup.cfg  setup.py
src/turtlebot_random_move_pkg/turtlebot_random_move_pkg/: random_move.py
src/yolo_detection_pkg/: package.xml  plot_confidence.py  setup.py
src/yolo_detection_pkg/launch/: yolo_detection_launch.py
src/yolo_detection_pkg/yolo_detection_pkg/: yolo_detection_node.py
