<?xml version="1.0"?>
<package format="3">
  <name>yolo_detection_pkg</name>
  <version>0.0.0</version>
  <description>YOLOv8 drone detection package</description>

  <maintainer email="quocthang@todo.todo">quocthang</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
